doc/2.5/_sources/reference/generated/ak.typetracer.touch_data.rst.txt
ak.typetracer.touch_data
------------------------

.. py:module: ak.typetracer.touch_data

Defined in `awkward.typetracer <https://github.com/scikit-hep/awkward/blob/ee63f6ea8d2a687027967d738995a7df02dadc13/src/awkward/typetracer.py>`__ on `line 133 <https://github.com/scikit-hep/awkward/blob/ee63f6ea8d2a687027967d738995a7df02dadc13/src/awkward/typetracer.py#L133>`__.

.. py:function:: ak.typetracer.touch_data(array, *, highlevel=True, behavior=None, attrs=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Recursively touches the data and returns a shall copy of the given array.

